--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 14:05:11 2018</p>
+         Last Run: Fri Jul 13 15:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -36,21 +36,21 @@
                         <td>1</td>
                         <td>60</td>
                         <td>3</td>
-                        <td>16</td>
+                        <td>18</td>
                         <td>NNW</td>
-                        <td>29</td>
+                        <td>28</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>14</td>
-                        <td>14</td>
+                        <td>15</td>
+                        <td>15</td>
                         <td>0</td>
-                        <td>51</td>
+                        <td>50</td>
                         <td>5</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>25</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>16</td>
                         <td>16</td>
                         <td>0</td>
-                        <td>43</td>
+                        <td>42</td>
                         <td>6</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>NNW</td>
-                        <td>24</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -70,11 +70,11 @@
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>39</td>
+                        <td>37</td>
                         <td>7</td>
-                        <td>10</td>
-                        <td>NNW</td>
                         <td>11</td>
+                        <td>NNW</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -82,11 +82,11 @@
                         <td>19</td>
                         <td>19</td>
                         <td>0</td>
-                        <td>36</td>
+                        <td>35</td>
                         <td>7</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>19</td>
+                        <td>11</td>
                      </tr>
                   </tbody>
                </table>
@@ -133,7 +133,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "13",
-                 "14",
+                 "15",
                  "16",
                  "18",
                  "19"
@@ -146,7 +146,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "13",
-                 "14",
+                 "15",
                  "16",
                  "18",
                  "19"
@@ -215,10 +215,10 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "60",
-                 "51",
-                 "43",
-                 "39",
-                 "36"
+                 "50",
+                 "42",
+                 "37",
+                 "35"
                ]
              },
              {
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "29",
-                 "25",
-                 "24",
-                 "11",
-                 "19"
+                 "28",
+                 "23",
+                 "21",
+                 "7",
+                 "11"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 14:05:11 2018</p>
+         Last Run: Fri Jul 13 15:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -274,9 +274,9 @@
                         <td>0</td>
                         <td>50</td>
                         <td>2</td>
-                        <td>8</td>
-                        <td>S</td>
-                        <td>3</td>
+                        <td>6</td>
+                        <td>SSW</td>
+                        <td>1</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
@@ -286,7 +286,7 @@
                         <td>0</td>
                         <td>44</td>
                         <td>3</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>S</td>
                         <td>3</td>
                      </tr>
@@ -300,7 +300,7 @@
                         <td>4</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>2</td>
+                        <td>4</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -312,19 +312,19 @@
                         <td>6</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>3</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
-                        <td>22</td>
-                        <td>22</td>
+                        <td>23</td>
+                        <td>23</td>
                         <td>0</td>
-                        <td>32</td>
+                        <td>31</td>
                         <td>7</td>
                         <td>10</td>
                         <td>SE</td>
-                        <td>7</td>
+                        <td>10</td>
                      </tr>
                   </tbody>
                </table>
@@ -374,7 +374,7 @@
                  "18",
                  "20",
                  "21",
-                 "22"
+                 "23"
                ]
              },
              {
@@ -387,7 +387,7 @@
                  "18",
                  "20",
                  "21",
-                 "22"
+                 "23"
                ]
              }
            ]
@@ -456,7 +456,7 @@
                  "44",
                  "39",
                  "35",
-                 "32"
+                 "31"
                ]
              },
              {
@@ -464,11 +464,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "1",
                  "3",
-                 "3",
-                 "2",
-                 "3",
-                 "7"
+                 "4",
+                 "6",
+                 "10"
                ]
              }
            ]
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 14:05:11 2018</p>
+         Last Run: Fri Jul 13 15:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -512,7 +512,7 @@
                         <td>0</td>
                         <td>23</td>
                         <td>2</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>SE</td>
                         <td>0</td>
                      </tr>
@@ -534,7 +534,7 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>31</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SE</td>
@@ -658,7 +658,7 @@
                "data":[
                  "23",
                  "25",
-                 "30"
+                 "31"
                ]
              },
              {
@@ -685,7 +685,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 14:05:11 2018</p>
+         Last Run: Fri Jul 13 15:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -709,24 +709,24 @@
                         <td>Partly Cloudy</td>
                         <td>28</td>
                         <td>28</td>
-                        <td>1</td>
+                        <td>0</td>
                         <td>28</td>
                         <td>1</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>31</td>
+                        <td>32</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
                         <td>26</td>
                         <td>26</td>
-                        <td>1</td>
+                        <td>0</td>
                         <td>34</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ENE</td>
-                        <td>23</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -846,8 +846,8 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "1",
-                 "1",
+                 "0",
+                 "0",
                  "0"
                ]
              },
@@ -866,8 +866,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "31",
-                 "23",
+                 "32",
+                 "24",
                  "23"
                ]
              }
@@ -885,7 +885,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 14:05:11 2018</p>
+         Last Run: Fri Jul 13 15:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Douglas Glen Blvd SE</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:30PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -909,36 +909,36 @@
                         <td>Clear</td>
                         <td>27</td>
                         <td>27</td>
-                        <td>13</td>
+                        <td>2</td>
                         <td>29</td>
                         <td>2</td>
-                        <td>13</td>
-                        <td>W</td>
-                        <td>24</td>
+                        <td>14</td>
+                        <td>NNW</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>25</td>
-                        <td>25</td>
-                        <td>13</td>
-                        <td>33</td>
+                        <td>26</td>
+                        <td>26</td>
+                        <td>2</td>
+                        <td>34</td>
                         <td>1</td>
-                        <td>14</td>
-                        <td>NNW</td>
-                        <td>23</td>
+                        <td>16</td>
+                        <td>N</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>13</td>
-                        <td>39</td>
+                        <td>2</td>
+                        <td>40</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>NNE</td>
-                        <td>22</td>
+                        <td>13</td>
                      </tr>
                   </tbody>
                </table>
@@ -983,7 +983,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "27",
-                 "25",
+                 "26",
                  "24"
                ]
              },
@@ -994,7 +994,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "27",
-                 "25",
+                 "26",
                  "24"
                ]
              }
@@ -1046,9 +1046,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "13",
-                 "13",
-                 "13"
+                 "2",
+                 "2",
+                 "2"
                ]
              },
              {
@@ -1057,8 +1057,8 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "29",
-                 "33",
-                 "39"
+                 "34",
+                 "40"
                ]
              },
              {
@@ -1066,9 +1066,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "24",
-                 "23",
-                 "22"
+                 "12",
+                 "13",
+                 "13"
                ]
              }
            ]
