--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 15:05:20 2018</p>
+         Last Run: Fri Jul 13 16:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -36,21 +36,21 @@
                         <td>1</td>
                         <td>60</td>
                         <td>3</td>
-                        <td>18</td>
+                        <td>16</td>
                         <td>NNW</td>
-                        <td>28</td>
+                        <td>27</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>15</td>
-                        <td>15</td>
+                        <td>14</td>
+                        <td>14</td>
                         <td>0</td>
                         <td>50</td>
                         <td>5</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>23</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>6</td>
                         <td>13</td>
                         <td>NNW</td>
-                        <td>21</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -133,7 +133,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "13",
-                 "15",
+                 "14",
                  "16",
                  "18",
                  "19"
@@ -146,7 +146,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "13",
-                 "15",
+                 "14",
                  "16",
                  "18",
                  "19"
@@ -226,9 +226,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "28",
-                 "23",
-                 "21",
+                 "27",
+                 "22",
+                 "20",
                  "7",
                  "11"
                ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 15:05:20 2018</p>
+         Last Run: Fri Jul 13 16:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -284,7 +284,7 @@
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>44</td>
+                        <td>43</td>
                         <td>3</td>
                         <td>8</td>
                         <td>S</td>
@@ -296,11 +296,11 @@
                         <td>20</td>
                         <td>20</td>
                         <td>0</td>
-                        <td>39</td>
+                        <td>38</td>
                         <td>4</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>4</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -308,11 +308,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>35</td>
+                        <td>34</td>
                         <td>6</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>6</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -324,7 +324,7 @@
                         <td>7</td>
                         <td>10</td>
                         <td>SE</td>
-                        <td>10</td>
+                        <td>9</td>
                      </tr>
                   </tbody>
                </table>
@@ -453,9 +453,9 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "50",
-                 "44",
-                 "39",
-                 "35",
+                 "43",
+                 "38",
+                 "34",
                  "31"
                ]
              },
@@ -466,9 +466,9 @@
                "data":[
                  "1",
                  "3",
-                 "4",
-                 "6",
-                 "10"
+                 "3",
+                 "5",
+                 "9"
                ]
              }
            ]
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 15:05:20 2018</p>
+         Last Run: Fri Jul 13 16:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -522,7 +522,7 @@
                         <td>28</td>
                         <td>28</td>
                         <td>0</td>
-                        <td>25</td>
+                        <td>26</td>
                         <td>1</td>
                         <td>16</td>
                         <td>SE</td>
@@ -531,8 +531,8 @@
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>27</td>
-                        <td>27</td>
+                        <td>26</td>
+                        <td>26</td>
                         <td>0</td>
                         <td>31</td>
                         <td>0</td>
@@ -584,7 +584,7 @@
                "data":[
                  "29",
                  "28",
-                 "27"
+                 "26"
                ]
              },
              {
@@ -595,7 +595,7 @@
                "data":[
                  "29",
                  "28",
-                 "27"
+                 "26"
                ]
              }
            ]
@@ -657,7 +657,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "23",
-                 "25",
+                 "26",
                  "31"
                ]
              },
@@ -685,7 +685,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 15:05:20 2018</p>
+         Last Run: Fri Jul 13 16:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -706,7 +706,7 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>28</td>
                         <td>28</td>
                         <td>0</td>
@@ -714,7 +714,7 @@
                         <td>1</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>32</td>
+                        <td>28</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -724,9 +724,9 @@
                         <td>0</td>
                         <td>34</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>ENE</td>
-                        <td>24</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -734,7 +734,7 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>42</td>
+                        <td>43</td>
                         <td>0</td>
                         <td>13</td>
                         <td>ENE</td>
@@ -858,7 +858,7 @@
                "data":[
                  "28",
                  "34",
-                 "42"
+                 "43"
                ]
              },
              {
@@ -866,8 +866,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "32",
-                 "24",
+                 "28",
+                 "22",
                  "23"
                ]
              }
@@ -885,7 +885,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 15:05:20 2018</p>
+         Last Run: Fri Jul 13 16:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Douglas Glen Blvd SE</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:30PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -910,7 +910,7 @@
                         <td>27</td>
                         <td>27</td>
                         <td>2</td>
-                        <td>29</td>
+                        <td>30</td>
                         <td>2</td>
                         <td>14</td>
                         <td>NNW</td>
@@ -919,8 +919,8 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>26</td>
-                        <td>26</td>
+                        <td>25</td>
+                        <td>25</td>
                         <td>2</td>
                         <td>34</td>
                         <td>1</td>
@@ -933,11 +933,11 @@
                         <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>2</td>
-                        <td>40</td>
+                        <td>3</td>
+                        <td>41</td>
                         <td>0</td>
-                        <td>16</td>
-                        <td>NNE</td>
+                        <td>14</td>
+                        <td>N</td>
                         <td>13</td>
                      </tr>
                   </tbody>
@@ -983,7 +983,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "27",
-                 "26",
+                 "25",
                  "24"
                ]
              },
@@ -994,7 +994,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "27",
-                 "26",
+                 "25",
                  "24"
                ]
              }
@@ -1048,7 +1048,7 @@
                "data":[
                  "2",
                  "2",
-                 "2"
+                 "3"
                ]
              },
              {
@@ -1056,9 +1056,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "29",
+                 "30",
                  "34",
-                 "40"
+                 "41"
                ]
              },
              {
