--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 16:05:09 2018</p>
+         Last Run: Fri Jul 13 17:05:24 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -47,7 +47,7 @@
                         <td>14</td>
                         <td>0</td>
                         <td>50</td>
-                        <td>5</td>
+                        <td>4</td>
                         <td>14</td>
                         <td>NNW</td>
                         <td>22</td>
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 16:05:09 2018</p>
+         Last Run: Fri Jul 13 17:05:24 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -272,7 +272,7 @@
                         <td>16</td>
                         <td>16</td>
                         <td>0</td>
-                        <td>50</td>
+                        <td>49</td>
                         <td>2</td>
                         <td>6</td>
                         <td>SSW</td>
@@ -312,7 +312,7 @@
                         <td>6</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>5</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -452,7 +452,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "50",
+                 "49",
                  "43",
                  "38",
                  "34",
@@ -467,7 +467,7 @@
                  "1",
                  "3",
                  "3",
-                 "5",
+                 "6",
                  "9"
                ]
              }
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 16:05:09 2018</p>
+         Last Run: Fri Jul 13 17:05:24 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -512,7 +512,7 @@
                         <td>0</td>
                         <td>23</td>
                         <td>2</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>SE</td>
                         <td>0</td>
                      </tr>
@@ -524,7 +524,7 @@
                         <td>0</td>
                         <td>26</td>
                         <td>1</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>SE</td>
                         <td>0</td>
                      </tr>
@@ -685,7 +685,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 16:05:09 2018</p>
+         Last Run: Fri Jul 13 17:05:24 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -706,7 +706,7 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>28</td>
                         <td>28</td>
                         <td>0</td>
@@ -714,7 +714,7 @@
                         <td>1</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>28</td>
+                        <td>32</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -724,9 +724,9 @@
                         <td>0</td>
                         <td>34</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>ENE</td>
-                        <td>22</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -734,7 +734,7 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>43</td>
+                        <td>42</td>
                         <td>0</td>
                         <td>13</td>
                         <td>ENE</td>
@@ -858,7 +858,7 @@
                "data":[
                  "28",
                  "34",
-                 "43"
+                 "42"
                ]
              },
              {
@@ -866,8 +866,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "28",
-                 "22",
+                 "32",
+                 "24",
                  "23"
                ]
              }
@@ -885,7 +885,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 16:05:09 2018</p>
+         Last Run: Fri Jul 13 17:05:24 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Douglas Glen Blvd SE</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:30PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -909,24 +909,24 @@
                         <td>Clear</td>
                         <td>27</td>
                         <td>27</td>
-                        <td>2</td>
+                        <td>3</td>
                         <td>30</td>
                         <td>2</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>12</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
                         <td>25</td>
                         <td>25</td>
-                        <td>2</td>
-                        <td>34</td>
+                        <td>3</td>
+                        <td>35</td>
                         <td>1</td>
                         <td>16</td>
                         <td>N</td>
-                        <td>13</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -936,9 +936,9 @@
                         <td>3</td>
                         <td>41</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>N</td>
-                        <td>13</td>
+                        <td>14</td>
                      </tr>
                   </tbody>
                </table>
@@ -1046,8 +1046,8 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
-                 "2",
+                 "3",
+                 "3",
                  "3"
                ]
              },
@@ -1057,7 +1057,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "30",
-                 "34",
+                 "35",
                  "41"
                ]
              },
@@ -1066,9 +1066,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "12",
                  "13",
-                 "13"
+                 "14",
+                 "14"
                ]
              }
            ]
